# intear-dex-prototype-001

./: Cargo.toml  README.md
.github/workflows/: test.yml
dexes/minimal/: Cargo.toml
dexes/minimal/src/: lib.rs
dexes/otc/: Cargo.toml
dexes/otc/src/: lib.rs
dexes/simple-amm/: Cargo.toml
dexes/simple-amm/src/: lib.rs
example-dex/: Cargo.toml
example-dex/src/: lib.rs
intear-dex-types/: Cargo.toml
intear-dex-types/src/: lib.rs
manage/: Cargo.toml
manage/src/: main.rs
smallest-possible-dex/: Cargo.toml
smallest-possible-dex/src/: lib.rs
src/: asset_deposit.rs  host_functions.rs  internal_asset_operations.rs  internal_operations.rs  lib.rs  storage_management.rs
tear-sdk/: Cargo.toml  build.rs
tear-sdk/src/: lib.rs
tests/: engine.rs  otc.rs  test_basics.rs  tests.rs
tests/assets/: ft.wasm
tests/common/: mod.rs
