[workspace]
members = ["example-dex", "tear-sdk"]

[package]
name = "intear-dex"
description = "cargo-near-new-project-description"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/INTEARnear/dex"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.near.reproducible_build]
image = "sourcescan/cargo-near:0.16.2-rust-1.86.0"
image_digest = "sha256:74c24d4d912f893198b8b13e01d43e0f78f3b00b3df45bf555a707eb4918a54e"
passed_env = []
container_build_command = [
    "cargo",
    "near",
    "build",
    "non-reproducible-wasm",
    "--locked",
]

[dependencies]
near-sdk = { version = "5.23", features = ["unstable"] }
wasmi = { version = "1.0.4", default-features = false }
tear-sdk = { path = "./tear-sdk" }
near-contract-standards = "5.23"

[dev-dependencies]
near-sdk = { version = "5.23", features = ["unit-testing"] }
near-workspaces = { version = "0.22", features = ["unstable"] }
tokio = { version = "1.12.0", features = ["full"] }
serde_json = "1"

[profile.release]
codegen-units = 1
opt-level = 3
lto = true
debug = false
panic = "abort"
overflow-checks = true
