[package]
name = "example-dex"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = { version = "5", default-features = false }
uint = "0.10"
intear-dex-types = { path = "../intear-dex-types", features = ["json"] }

[profile.release]
codegen-units = 1
opt-level = "s"
