[package]
name = "manage"
version = "0.1.0"
edition = "2024"

[dependencies]
near-api = { version = "0.8", features = ["keystore"] }
clap = { version = "4.5", features = ["derive"] }
dotenvy = "0.15"
base64 = "0.21"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
borsh = "1.6"
serde = { version = "1", features = ["derive"] }
