[package]
name = "smallest-possible-dex"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
talc = "4.4.3"
spin = "0.10.0"
borsh = "1.6.0"
intear-dex-types = { path = "../intear-dex-types" }

[profile.release]
codegen-units = 1
opt-level = "s"
panic = "abort"

[profile.dev]
panic = "abort"
