[package]
name = "minimal-dex"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
talc = { version = "4.4.3", default-features = false, features = ["lock_api"] }
borsh = { version = "1.6.0", default-features = false }
intear-dex-types = { path = "../../intear-dex-types" }
