[package]
name = "otc-dex"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = { version = "5", default-features = false, features = ["unstable"] }
intear-dex-types = { path = "../../intear-dex-types", features = ["json"] }
talc = { version = "4.4.3", default-features = false, features = ["lock_api"] }
near-crypto = { version = "0.34.2", default-features = false }
